--- a/applications/simple_radar_pipeline/cpp/CMakeLists.txt
+++ b/applications/simple_radar_pipeline/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,7 +19,6 @@ find_package(holoscan 2.6.0 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
 # Enable cuda language
-set(CMAKE_CUDA_ARCHITECTURES "70;80")
 enable_language(CUDA)
 
 # Download MatX
@@ -27,7 +26,7 @@ include(FetchContent)
 FetchContent_Declare(
   MatX
   GIT_REPOSITORY https://github.com/NVIDIA/MatX.git
-  GIT_TAG v0.9.0
+  GIT_TAG v0.9.3
 )
 FetchContent_MakeAvailable(MatX)
 
